--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,40 +1,15 @@
-    <div class="background">
-      <div class="heading">
-        Strategic Planning
-      </div>
-      
-      <div class="login">
-        <div class="login-text">LOGIN</div>
-      
-        <form class="form" [formGroup]="loginForm" (submit)="onSubmit()">
-          <div class="row login-name">
-            <div class="col-sm-10 col-xs-10">
-            <input type="text" name='username' id='username' formControlName="username" placeholder="Username" class="name"/>
-            </div>
-               <div class="col-sm-2 col-xs-2">
-              <i class="fa fa-user white-text" aria-hidden="true"></i>
-             </div>
-           </div>
-          <div class="row password">
-            <div class="col-sm-10 col-xs-10">
-            <input type='password' name='password' id='password' formControlName="password" placeholder="Password" class="name" />
-            </div>
-    
-            <div class="col-sm-2 col-xs-2">
-              <i class="fa fa-lock white-text" aria-hidden="true"></i>
-            </div>
-          </div>
-          <div class="login-button row">
-            <div class="col-sm-12 col-xs-12">
-            <input type="submit" class="btn " value="Sign in" [disabled]="loginForm.invalid"/>
-          <div *ngIf="loginStart"></div>
-          <div *ngIf="error">
-            <p class="invalid-text">Username or password invalid.</p>
-          </div>
-          </div>
-          </div>
-        </form>
-      </div>
-    
-    </div>
-      
+<div class="login-page">
+  <div class="title animate_fadein"> 
+    Strategic Planning
+  </div>
+  <div class="form">
+    <form [formGroup]="loginForm" (submit)="onSubmit()" class="login-form">
+      <input type="text" name='username' id='username' formControlName="username" placeholder="Username"/>
+      <input type='password' name='password' id='password' formControlName="password" placeholder="Password"/>
+      <button type="submit" value="Sign in" [disabled]="loginForm.invalid">login</button>
+      <div *ngIf="loginStart"></div>
+      <!-- <p class="message">Not registered? <a href="#">Create an account</a></p> -->
+      <p *ngIf="error" class="message">Invalid Username/Password</p>
+    </form>
+  </div>
+</div>
