--- a/src/app/planner/home/home.component.html
+++ b/src/app/planner/home/home.component.html
@@ -1,4 +1,4 @@
-  <div class="container-fluid">
+  <div class="container">
     <div class="panel panel-info panel-no-border">
       <!--<div class="panel-heading background-transparent text-center panel-no-border">-->
       <div class="panel-heading">
