--- a/src/app/planner/planner.component.css
+++ b/src/app/planner/planner.component.css
@@ -29,3 +29,33 @@
   vertical-align: top;
   border-top: 1px solid #ddd;
 }
+
+/*search*/
+.search input[type=text] {
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  background-color: white;
+  /* background-image: url('searchicon.png'); */
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 2px;
+  margin-left: 5px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+}
+
+.search input[type=text]:focus {
+  width: 80%;
+}
+
+.search button{
+  background: transparent;
+  font-size: 16px;
+  padding: 2px;
+}
+.search form{
+  display: inherit;
+}
