--- a/src/app/planner/spi/spi.component.html
+++ b/src/app/planner/spi/spi.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="">
   <div class="panel panel-default">
     <div class="panel-heading rgCommandRow">Edit Section
       <span class="pull-right" style="cursor:pointer">
@@ -15,8 +15,8 @@
           <div class="form-group">
             <label for="sel1">Select Goal:</label>
             <select class="form-control" id="sel1" formControlName="objectiveId">
-                            <option *ngFor="let objective of objectives;let i=index;" [value]="objective.objectiveId">{{objective.objective}}</option>
-                          </select>
+              <option *ngFor="let objective of objectives;let i=index;" [value]="objective.objectiveId">{{i+1}}.{{objective.objective}}</option>
+            </select>
           </div>
         </div>
         <div class="col-lg-6 col-xs-12 col-sm-6">
@@ -26,21 +26,19 @@
           </div>
         </div>
         <div class="col-lg-6 col-sm-6 col-xs-12 col-md-6">
-          <div class="row">
-            <div class="form-group">
-              <label>Current Level</label>
-              <input type="number" min="0" step="1" class="form-control" formControlName="currentLevel">
-            </div>
+          <div class="form-group">
+            <label>Current Level</label>
+            <input type="number" min="0" step="1" class="form-control" formControlName="currentLevel">
           </div>
-          <div class="row">
-            <div class="form-group">
-              <label>Select MeasureUnit</label>
-              <select class="form-control" formControlName="measureUnit">
-                <option value="" disabled selected>Choose Measurement Unit</option>
-                <option value="percentage">Percent</option>
-                <option value="decimal">Decimal</option>
-              </select>
-            </div>
+        </div>
+        <div class="col-lg-6 col-sm-6 col-xs-12 col-md-6">
+          <div class="form-group">
+            <label>Select MeasureUnit</label>
+            <select class="form-control" formControlName="measureUnit">
+              <option value="" disabled selected>Choose Measurement Unit</option>
+              <option value="percentage">Percent</option>
+              <option value="decimal">Decimal</option>
+            </select>
           </div>
         </div>
       </div>
@@ -84,12 +82,12 @@
     <tbody *ngFor="let spi of spis;let i = index;">
       <tr>
         <td [attr.rowspan]="spi.spis.length+1" style="vertical-align: middle;">{{spi.objective}}</td>
-        <ng-template let-spi ngFor [ngForOf]="spi.spis" let-j="index">
-          <tr>
-            <td  style="vertical-align: middle;" >{{spi.spi}}</td>
-          </tr>
-        </ng-template>
       </tr>
+      <ng-template let-spi ngFor [ngForOf]="spi.spis" let-j="index">
+        <tr>
+          <td  style="vertical-align: middle;" >{{spi.spi}}</td>
+        </tr>
+      </ng-template>      
     </tbody>
   </table>
 </div>
