--- a/src/app/planner/activity/activity.html
+++ b/src/app/planner/activity/activity.html
@@ -1,85 +1,91 @@
 <div class="container">
-<div class="panel panel-default">
-  <div class="panel-heading rgCommandRow">Edit Section
-    <span class="pull-right" style="cursor:pointer">
+  <div class="panel panel-default">
+    <div class="panel-heading rgCommandRow">Edit Section
+      <span class="pull-right" style="cursor:pointer">
         <div class="ctooltip">
           <i class="glyphicon glyphicon-remove"></i>
           <span class="ctooltiptext">Close</span>
+    </div>
+    </span>
   </div>
-  </span>
-</div>
-<div class="panel-body">
-  <form [formGroup]="activityForm" (submit)="submitActivity()">
-    <div class="row">
+  <div class="panel-body">
+    <form [formGroup]="activityForm" (submit)="submitActivity()">
+      <div class="row">
         <div class="col-lg-6 col-xs-12 col-sm-12">
           <div class="form-group">
-              <label for="sel1">Select Goal:</label>
-              <select class="form-control" id="sel1" formControlName="objectiveId" (ngModelChange)="getInitiative($event)">
+            <label for="sel1">Select Goal:</label>
+            <select class="form-control" id="sel1" formControlName="objectiveId" (ngModelChange)="getInitiative($event)">
                 <option *ngFor="let objective of objectives;let i=index;" [value]="objective.objectiveId">{{objective.objective}}</option>
               </select>
           </div>
         </div>
         <div class="col-lg-6 col-xs-12 col-sm-12">
           <div class="form-group">
-              <label for="sel1">Select Initiative:</label>
-              <select class="form-control" id="sel1" formControlName="initiativeId">
+            <label for="sel1">Select Initiative:</label>
+            <select class="form-control" id="sel1" formControlName="initiativeId">
                 <option *ngFor="let initiative of initiatives;let j=index;" [value]="initiative.initiativeId">{{initiative.initiative}}</option>
               </select>
           </div>
         </div>
-      <div class="col-lg-12 col-xs-12 col-sm-12">
-        <div class="form-group">
-          <label>Activity</label>
-          <textarea class="form-control" rows="2" formControlName="activity"></textarea>
+        <div class="col-lg-12 col-xs-12 col-sm-12">
+          <div class="form-group">
+            <label>Activity</label>
+            <textarea class="form-control" rows="2" formControlName="activity"></textarea>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-success" [disabled]="activityForm.invalid">Submit</button>
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    </form>
+  </div>
+</div>
+</div>
+<div class="container-fluid">
+<div class="panel-heading rgCommandRow">Proposed Activities
+  <span class="pull-right" style="cursor:pointer">
+        <div class="ctooltip">
+          <i class="glyphicon glyphicon-plus"></i>
+  <span class="ctooltiptext">Add Activity</span>
+</div>
+</span>
+</div>
+
+<div class="jumbotron nopadding ">
+  <div class="d-flex text-center margin flex-header border">
+    <div class="p-2 w-50">
+      <b>Objectives</b>
+    </div>
+    <div class="p-2 w-50">
+      <b>Initiatives</b>
+    </div>
+    <div class="p-2 w-75">
+      <b>Activities</b>
+    </div>
+  </div>
+
+
+  <div class="d-flex padding border" *ngFor="let goal of goals;let i = index;">
+    <div class="p-2 w-50">
+      {{ goal.objective }}
+    </div>
+    <div class="p-3">
+      <div *ngFor="let initiate of goal.initiatives;let j=index;">
+        <div class="d-flex innerFlex border">
+          <div class="p-2 w-50">
+            <span>{{initiate.initiative}}</span>
+          </div>
+          <ol class="p-2 w-75">
+            <li *ngFor="let activit of initiate.activities;let k=index;">
+              <span>{{activit.activity}}</span>
+            </li>
+          </ol>
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-success" [disabled]="activityForm.invalid">Submit</button>
-    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-  </form>
-</div>
-</div>
-<div class="panel panel-default">
-  <div class="panel-heading rgCommandRow">Proposed Activities
-    <span class="pull-right" style="cursor:pointer">
-        <div class="ctooltip">
-          <i class="glyphicon glyphicon-plus"></i>
-          <span class="ctooltiptext">Add Activity</span>
   </div>
-  </span>
-</div>
-
-
-
-
-<div class="panel-body">
- <div class="d-flex align-items-center rounded border" *ngFor="let goal of goals;let i = index;"> 
-    <div class="p-2 w-50">
-      {{ goal.objective }}
-    </div> 
-    <div class="p-2">
-      <div *ngFor="let initiate of goal.initiatives;let j=index;"> 
-        <div class="d-flex align-items-center border">
-          <div class="p-2 w-50">
-            {{initiate.initiative}}
-          </div> 
-          <div class="p-2 w-75"> 
-            <div *ngFor="let activit of initiate.activities;let k=index;">
-              {{k+1}}. {{activit.activity}}
-            </div>
-          </div>
-        </div>  
-      </div> 
-    </div> 
-  </div> 
-
-
-
-</div>
-
-
-
-
-
 </div>
 </div>
+
+
+
+
