--- a/src/app/planner/activity/activity.css
+++ b/src/app/planner/activity/activity.css
@@ -19,6 +19,9 @@
 .p-3{
   flex:2;
 }
+.p-4{
+  flex:3;
+}
 .p-3 span{
   padding:5px;
 }
@@ -41,4 +44,16 @@ ol, ul {
 }
 .jumbotron{
   background:rgb(248, 242, 255);
+}
+.initiative{
+  padding:15px;
+}
+.btn-del, .btn-edit{
+  color:#3b548c;
+}
+.btn-del:hover{
+  color:#F44336;
+}
+.btn-edit:hover{
+  color:#4CAF50;
 }
