--- a/src/app/planner/activity/activity.html
+++ b/src/app/planner/activity/activity.html
@@ -5,8 +5,8 @@
         <div class="ctooltip">
           <i class="glyphicon glyphicon-remove"></i>
           <span class="ctooltiptext">Close</span>
-    </div>
-    </span>
+        </div>
+      </span>
   </div>
   <div class="panel-body">
     <form [formGroup]="activityForm" (submit)="submitActivity()">
@@ -43,11 +43,11 @@
 <div class="container-fluid">
 <div class="panel-heading rgCommandRow">Proposed Activities
   <span class="pull-right" style="cursor:pointer">
-        <div class="ctooltip">
-          <i class="glyphicon glyphicon-plus"></i>
-  <span class="ctooltiptext">Add Activity</span>
-</div>
-</span>
+      <div class="ctooltip">
+        <i class="glyphicon glyphicon-plus"></i>
+        <span class="ctooltiptext">Add Activity</span>
+      </div>
+  </span>
 </div>
 
 <div class="jumbotron nopadding ">
@@ -60,12 +60,12 @@
     </div>
     <div class="p-2 w-75">
       <b>Activities</b>
-    </div>
+    </div>  
   </div>
 
 
   <div class="d-flex padding border" *ngFor="let goal of goals;let i = index;">
-    <div class="p-2 w-50">
+    <div class="p-2 w-30">
       {{ goal.objective }}
     </div>
     <div class="p-3">
@@ -74,18 +74,23 @@
           <div class="p-2 w-50">
             <span>{{initiate.initiative}}</span>
           </div>
-          <ol class="p-2 w-75">
-            <li *ngFor="let activit of initiate.activities;let k=index;">
-              <span>{{activit.activity}}</span>
-            </li>
-          </ol>
-        </div>
+          <div class="p-3">
+            <div class="initiative" *ngFor="let activit of initiate.activities;let k=index;">
+              <div class="row">
+                <div class="col-lg-10 col-sm-10">
+                    {{activit.activity}}
+                </div>
+                <div class="col-lg-1 col-xs-1">
+                    <i class="glyphicon glyphicon-edit btn-edit" style="cursor:pointer;"(click)="updateActivity(goal,initiate,activit)" data-parent="#accordion" data-toggle="collapse" href="#collapse1"></i>
+                </div>
+                <div class="col-lg-1 col-xs-1">
+                    <i style="cursor:pointer;" class="glyphicon glyphicon-remove btn-del" (click)="deleteActivity(activit.activityId,initiate.activities,k)"></i>    
+                </div>                
+              </div>
+            </div>
+          </div>
       </div>
     </div>
   </div>
 </div>
 </div>
-
-
-
-
