--- a/src/app/planner/activity/activity.css
+++ b/src/app/planner/activity/activity.css
@@ -57,3 +57,10 @@ ol, ul {
 .btn-edit:hover{
   color:#4CAF50;
 }
+.border-left{
+  border-left:1px solid rgba(86,61,124,.5);
+  margin-left: -1px;
+}
+.border-right{
+  border-right:1px solid rgba(86,61,124,.5);
+}
