--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top menuBar">
-  <div class="container-fluid">
+<nav class="navbar navbar-fixed-top">
     <ul class="nav navbar-nav">
       <li routerLinkActive="active"><a routerLink="./home">Home</a></li>
       <li routerLinkActive="active" class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Strategic plan<span class="caret"></span></a>
@@ -14,6 +13,5 @@
       <li><a routerLink="./home">Action plan</a></li>
       <li><a routerLink="/login" (click)="logout()">Logout</a></li>      
     </ul>
-  </div>
 </nav>
 <router-outlet></router-outlet>
