--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,21 @@ body{
 .p-4 {
         flex: 3;
 }
-
+p-5{
+        flex: 4;
+}
+p-6{
+        flex: 5;
+}
+p-7{
+        flex: 6;
+}
+p-8{
+        flex: 7;
+}
+p-9{
+        flex: 8;
+}
 .p-3 span {
         padding: 5px;
 }
