--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,9 @@ body{
 .margin-1{
         margin:-1px;
 }
+.height-100{
+        min-height:100px;
+}
 /* FLexbox */
 .nopadding {
         padding: 0px !important;
