--- a/src/app/planner/measure/measure.html
+++ b/src/app/planner/measure/measure.html
@@ -174,6 +174,9 @@
       <div class="d-flex border flex-header ">
           <div class="p-2 border-right">
              Goal
+             <span class="search">
+                <input type="text" name="search" (keyup)="search($event)"  placeholder="Search..">
+            </span>
           </div>
           <div class="p-3 border-left">
             <div class="d-flex">
