--- a/src/app/planner/measure/measure.html
+++ b/src/app/planner/measure/measure.html
@@ -218,7 +218,7 @@
             </div>
           </div>
         </div>
-<div class="d-flex margin-1" *ngFor="let goal of goals;let i = index;">
+<div class="d-flex margin-1 body-background" *ngFor="let goal of goals;let i = index;">
   <div class="p-2 border">
       {{ goal.objective }}
   </div>
