--- a/src/app/planner/goal/goal.html
+++ b/src/app/planner/goal/goal.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="panel-group" id="accordion">
-    <div class="panel panel-default">
-      <div class="panel-heading rgCommandRow"><span style="cursor:pointer;" data-toggle="collapse" data-parent="#accordion" href="#collapse1"><i class="glyphicon glyphicon-collapse-up"></i>Edit Section</span> 
+    <div class="panel">
+      <div class="panel-heading background-3"><span style="cursor:pointer;" data-toggle="collapse" data-parent="#accordion" href="#collapse1"><i class="glyphicon glyphicon-collapse-up"></i>Edit Section</span> 
         <!-- <span class="pull-right" style="cursor:pointer">
           <div class="ctooltip">
             <i class="glyphicon glyphicon-remove"></i>
@@ -17,7 +17,7 @@
               <div class="col-lg-12 col-xs-12 col-sm-12">
                 <div class="form-group">
                   <label class="col-form-label">
-                    <span class="badge">Objective</span>
+                    <span class="badge background-3">Objective</span>
                   </label>
                   <textarea class="form-control" rows="3" formControlName="objective"></textarea>
                 </div>
@@ -29,9 +29,9 @@
         </div>
       </div>
     </div>
-    <div class="panel panel-default">
-      <div class="panel-heading rgCommandRow"><span style="cursor:pointer;" data-toggle="collapse" data-parent="#accordion" href="#collapse2">Strategic Goals</span>
-        <span class="pull-right" style="cursor:pointer">
+    <div class="panel">
+      <div class="panel-heading background-4"><span style="cursor:pointer; color:white" data-toggle="collapse" data-parent="#accordion" href="#collapse2">Strategic Goals</span>
+        <span class="pull-right" style="cursor:pointer;color:white">
           <div class="ctooltip">
             <i class="glyphicon glyphicon-plus"></i>
             <span class="ctooltiptext">Add Goal</span>
