--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,10 @@
         --color0        : #f2f3f8;
         --color1        : #d6c7e8;
         --color2        : rgb(248, 242, 255);
+        --color3        : #36a3f7;
+        --color4        : #716aca;
+        --color4Text    : #white;
+        --color3Text    : white;
         --button-color1 : #3b548c;
         --button-color2 : #F44336;
         --button-color3 : #4CAF50;
@@ -25,6 +29,14 @@ body{
 }
 .height-100{
         min-height:100px;
+}
+.background-3{
+        background: var(--color3);
+        color: var(--color3Text);
+}
+.background-4{
+        background: var(--color4);
+        color: var(--color4Text) !important;
 }
 .header-background{
         background: var(--color1);
