--- a/src/app/planner/spi/spi.component.html
+++ b/src/app/planner/spi/spi.component.html
@@ -1,6 +1,6 @@
-<div class="">
-  <div class="panel panel-default">
-    <div class="panel-heading rgCommandRow">Edit Section
+<div class="container-fluid">
+  <div class="panel">
+    <div class="panel-heading background-3">Edit Section
       <span class="pull-right" style="cursor:pointer">
           <div class="ctooltip">
             <i class="glyphicon glyphicon-remove"></i>
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="panel panel-default" formArrayName="targetDigital">
-        <div class="panel-heading  background-transparent">
+        <div class="panel-heading background-transparent background-5">
           <b>Annual Target</b>
         </div>
         <div class="panel-body">
@@ -62,8 +62,8 @@
   </div>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-heading rgCommandRow">Strategic Planning - Strategic Performance Indicators
+<div class="panel">
+  <div class="panel-heading background-4">Strategic Planning - Strategic Performance Indicators
     <span class="pull-right" style="cursor:pointer">
             <div class="ctooltip">
               <i class="glyphicon glyphicon-plus"></i>
@@ -71,7 +71,6 @@
   </div>
   </span>
 </div>
-<div class="panel-body ">
   <table class="table table-bordered header-background">
     <thead>
       <tr>
@@ -90,7 +89,6 @@
       </ng-template>      
     </tbody>
   </table>
-</div>
 </div>
 
 </div>
