--- a/src/app/planner/measure/measure.html
+++ b/src/app/planner/measure/measure.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <!-- <div class="panel-group" id="accordion"> -->
-  <div class="panel panel-default">
-    <div class="panel-heading rgCommandRow"><span style="cursor:pointer;" data-toggle="collapse" data-parent="#accordion" href="#collapse1">Edit Section</span>
+  <div class="panel">
+    <div class="panel-heading background-3"><span style="cursor:pointer;" data-toggle="collapse" data-parent="#accordion" href="#collapse1">Edit Section</span>
       <span class="pull-right" style="cursor:pointer" data-toggle="tooltip" data-placement="auto" title="collapse">
         <i class="glyphicon glyphicon-collapse-up" data-toggle="collapse" data-parent="#accordion" href="#collapse1"></i>
       </span>
@@ -128,8 +128,8 @@
     </div>
   </div>
 
-  <div class="panel panel-default">
-    <div class="panel-heading rgCommandRow"><span style="cursor:pointer;" data-toggle="collapse" data-parent="#accordion" href="#collapse2">Proposed Operational Performance Indicators</span>
+  <div class="panel">
+    <div class="panel-heading background-4"><span style="cursor:pointer;" data-toggle="collapse" data-parent="#accordion" href="#collapse2">Proposed Operational Performance Indicators</span>
       <span class="pull-right" style="cursor:pointer">
         <div class="ctooltip">
           <i class="glyphicon glyphicon-plus"></i>
@@ -138,7 +138,6 @@
       </span>
     </div>
     <div id="collapse2" class="panel-collapse collapse in">
-    <div class="panel-body">
       <!-- <table class="table table-hover table-bordered">
         <colgroup>
           <col style="width:18%">
@@ -292,11 +291,6 @@
     </div>
   </div>
 </div>
-
-
-
-
-    </div>
     </div>
   </div>
   <!-- </div> -->
